// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<HeadLine /> condensedHeaderNormalH3 should be rendered properly 1`] = `
<Title
  className="header undefined arial"
  level={3}
>
  Header h3
</Title>
`;

exports[`<HeadLine /> headerBoldH1 should be rendered properly 1`] = `
<Title
  className="header bold undefined"
>
  Header h1
</Title>
`;

exports[`<HeadLine /> headerNormalH2 should be rendered properly 1`] = `
<Title
  className="header undefined undefined"
  level={2}
>
  Header h2
</Title>
`;

exports[`<HeadLine /> headerNormalH3 should be rendered properly 1`] = `
<Title
  className="header undefined undefined"
  level={3}
>
  Header h3
</Title>
`;
